--- a/src/App.css
+++ b/src/App.css
@@ -25,8 +25,8 @@
 }
 
 .App-Interface {
-	width: 80vw;
-	margin-left: 10vw;
+	width: 70vw;
+	margin-left: 15vw;
 
 }
 
@@ -57,7 +57,7 @@
 }
 
 .Header-Icon {
-	transform: translateY(12px)
+	transform: translateY(12px) translateX(-5px);
 }
 
 .Header img {
@@ -67,6 +67,7 @@
 
 .Header-Logo {
 	filter: invert(100%);
+	margin-bottom: -25px;
 }
 
 
@@ -172,6 +173,16 @@
 	justify-content: center;
 
 	transform: translateY(-300px);
+	width: 65vw;
+	margin-left: 18vw;
+
+	max-height: 200px;
+	overflow-y: auto;
+}
+
+.App-Output-Text {
+	padding-top: -15px;
+	/* padding-bottom: 25px; */
 }
 
 .Footer {
@@ -181,6 +192,7 @@
 	text-align: center;
 	padding: 10px;
 	font-size: 0.8rem;
+	height: 32px;
 }
 
 a {
@@ -189,4 +201,35 @@ a {
 
 a:hover {
 	color: var(--primary);
+}
+
+/* --------------- LEGAL --------------- */
+
+.Legal-Body {
+	background-color: var(--background);
+}
+
+.Legal-Content {
+	margin: 50px;
+}
+
+.Legal-Table {
+	width: 100%;
+	text-align: block;
+	padding: 20px;
+
+	display: flex;
+	flex-direction: row;
+}
+
+Legal-Table-Left {
+	width: 50%;
+	text-align: left;
+	padding: 20px;
+}
+
+.Legal-Table-Right {
+	width: 50%;
+	text-align: left;
+	padding: 20px;
 }
